--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,15 +1,17 @@
-<div class="jumbotron">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-        <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-        Always a pleasure scaffolding your apps.
-    </p>
-    <p id="update-colors-button"><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="container">
+<tabset>
+    <tab ng-repeat="r in regions" heading="{{r.name}}" active="r.active" disabled="r.disabled">
+      <span class="label label-info" ng-repeat="c in countries" ng-if="c['region-code'] == r.code">{{c.name}}</span>
+    </tab>
+  </tabset>
+
+
+<!-- <li ng-repeat="(name, region) in places">{{name}}: {{region}}</li> -->
 </div>
+
 <div id="world-map" style="height: 375px" ></div>
 
 <script>
-
 $(function(){
  var palette = ['#66C2A5', '#FC8D62', '#8DA0CB', '#E78AC3', '#A6D854'],
  generateColors = function(){
@@ -28,11 +30,17 @@ var selectedCountries = {
   "CN": "Asia",
   "VN": "Asia",
   "KH": "Asia",
-  "MY": "Asia"
+  "MY": "Asia",
+  "IT": "Asia"
 };
 
+var selectedCountries1 = [{name:"AU", region:"Oceania"},
+    {name:"CN", region:"Asia"}
+  ];
+
+
 map = new jvm.WorldMap({
-    map: 'world_mill_en',
+    map: 'world_mill_en_with_antarctica',
     container:  $('#world-map'),
     //scaleColors: ['#C8EEFF', '#0071A4'],
     normalizeFunction: 'polynomial',
@@ -61,15 +69,15 @@ map = new jvm.WorldMap({
     },
     backgroundColor: '#96CBD7',
     markers: [
-    {latLng: [41.90, 12.45], name: 'Vatican City'},
-    {latLng: [43.93, 12.46], name: 'San Marino'},
-    {latLng: [-4.61, 55.45], name: 'Seychelles'},
+    //{latLng: [41.90, 12.45], name: 'Vatican City'},
+    //{latLng: [43.93, 12.46], name: 'San Marino'},
+    //{latLng: [-4.61, 55.45], name: 'Seychelles'},
     {latLng: [7.35, 134.46], name: 'Palau'}
     ],
      series: {
       regions: [{
         //values: selectedCountries,
-        //scale: ['#0071A4'],
+       // scale: ['#0071A4'],
          scale: {
           "Oceania": "#2761ad",
           "Asia": "#0071A4",
@@ -87,23 +95,10 @@ $('#update-colors-button').click(function(e){
     //map.removeAllMarkers();
     //map.addMarker("SG", {latLng: [1.3, 103.8], name: 'Singapore'},{markers: [{attribute: 'fill'}]});
     //map.addMarkers( [{latLng: [1.3, 103.8], name: 'Singapore'},{latLng: [-20.2, 57.5], name: 'Mauritius'}],{markers: [{attribute: 'fill'}]});
-    map.series.regions[0].setValues(selectedCountries);
+    map.series.regions[0].setValues(places);
 });
 });
 
 
 </script>
-<div class="row marketing">
-    <h4>HTML5 Boilerplate</h4>
-    <p>
-        HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-    </p>
 
-    <h4>Angular</h4>
-    <p>
-        AngularJS is a toolset for building the framework most suited to your application development.
-    </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-</div>
