--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,104 +1,114 @@
-<div class="container">
+<div class="countries-block">
+  <div class="input-group">
+      <input type="text"  ng-model="typedCountry" placeholder="Type to search countries or choose from the list below..." typeahead="c.name for c in countries | filter:$viewValue | limitTo:8" class="form-control">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button" ng-click="getCountryByName(typedCountry);">Add</button>
+      </span>
+    </div>
+  
 <tabset>
-    <tab ng-repeat="r in regions" heading="{{r.name}}" active="r.active" disabled="r.disabled">
-      <span class="label label-info" ng-repeat="c in countries" ng-if="c['region-code'] == r.code">{{c.name}}</span>
-    </tab>
+    <tab ng-repeat="r in regions" heading="{{r.name}}">
+      <ul class="country-list">
+      <li ng-repeat="c in countries" ng-if="c['region-code'] == r.code"><span ng-click="triggerAlert(c);" class="label label-info">{{c.name}}</span></li>
+      </ul>
+    </tab> 
   </tabset>
-
-
 <!-- <li ng-repeat="(name, region) in places">{{name}}: {{region}}</li> -->
 </div>
-
-<div id="world-map" style="height: 375px" ></div>
-
-<script>
-$(function(){
- var palette = ['#66C2A5', '#FC8D62', '#8DA0CB', '#E78AC3', '#A6D854'],
- generateColors = function(){
-    var colors = {},
-    key;
-
-    for (key in map.regions) {
-      colors[key] = palette[Math.floor(Math.random()*palette.length)];
-  }
-  return colors;
-},
-map;
-
-var selectedCountries = {
-  "AU": "Oceania",
-  "CN": "Asia",
-  "VN": "Asia",
-  "KH": "Asia",
-  "MY": "Asia",
-  "IT": "Asia"
-};
-
-var selectedCountries1 = [{name:"AU", region:"Oceania"},
-    {name:"CN", region:"Asia"}
-  ];
+<div map></div>
 
 
-map = new jvm.WorldMap({
-    map: 'world_mill_en_with_antarctica',
-    container:  $('#world-map'),
-    //scaleColors: ['#C8EEFF', '#0071A4'],
-    normalizeFunction: 'polynomial',
-    regionStyle: {
-        initial: {
-            fill: 'white',
-            "fill-opacity": 1,
-            stroke: 'none',
-            "stroke-width": 0,
-            "stroke-opacity": 1
-        },
-        hover: {
-            fill: '#CCECE0',
-            "fill-opacity": 0.8
-        }
-    },
-    markerStyle: {
-        initial: {
-            fill: '#FA4239',
-            stroke: '#FFFFFF'
-        },
-        hover: {
-            stroke: '#1A8EBF',
-            "stroke-width": 2
-        }
-    },
-    backgroundColor: '#96CBD7',
-    markers: [
-    //{latLng: [41.90, 12.45], name: 'Vatican City'},
-    //{latLng: [43.93, 12.46], name: 'San Marino'},
-    //{latLng: [-4.61, 55.45], name: 'Seychelles'},
-    {latLng: [7.35, 134.46], name: 'Palau'}
-    ],
-     series: {
-      regions: [{
-        //values: selectedCountries,
-       // scale: ['#0071A4'],
-         scale: {
-          "Oceania": "#2761ad",
-          "Asia": "#0071A4",
-          "OTHER": "#c7b789"
-      },
-        attribute: 'fill'
-      }]
-    }
+<!-- <div>fenggexian</div>
+<div id="world-map" style="height: 375px" ></div> -->
+
+<!-- <script>
+// $(function(){
+//  var palette = ['#66C2A5', '#FC8D62', '#8DA0CB', '#E78AC3', '#A6D854'],
+//  generateColors = function(){
+//     var colors = {},
+//     key;
+
+//     for (key in map.regions) {
+//       colors[key] = palette[Math.floor(Math.random()*palette.length)];
+//   }
+//   return colors;
+// },
+// map;
+
+// var selectedCountries = {
+//   "AU": "Oceania",
+//   "CN": "Asia",
+//   "VN": "Asia",
+//   "KH": "Asia",
+//   "MY": "Asia",
+//   "IT": "Asia"
+// };
+
+// var selectedCountries1 = [{name:"AU", region:"Oceania"},
+//     {name:"CN", region:"Asia"}
+//   ];
+
+
+// map = new jvm.WorldMap({
+//     map: 'world_mill_en_with_antarctica',
+//     container:  $('#world-map'),
+//     //scaleColors: ['#C8EEFF', '#0071A4'],
+//     normalizeFunction: 'polynomial',
+//     regionStyle: {
+//         initial: {
+//             fill: 'white',
+//             "fill-opacity": 1,
+//             stroke: 'none',
+//             "stroke-width": 0,
+//             "stroke-opacity": 1
+//         },
+//         hover: {
+//             fill: '#CCECE0',
+//             "fill-opacity": 0.8
+//         }
+//     },
+//     markerStyle: {
+//         initial: {
+//             fill: '#FA4239',
+//             stroke: '#FFFFFF'
+//         },
+//         hover: {
+//             stroke: '#1A8EBF',
+//             "stroke-width": 2
+//         }
+//     },
+//     backgroundColor: '#96CBD7',
+//     markers: [
+//     //{latLng: [41.90, 12.45], name: 'Vatican City'},
+//     //{latLng: [43.93, 12.46], name: 'San Marino'},
+//     //{latLng: [-4.61, 55.45], name: 'Seychelles'},
+//     {latLng: [7.35, 134.46], name: 'Palau'}
+//     ],
+//      series: {
+//       regions: [{
+//         //values: selectedCountries,
+//        // scale: ['#0071A4'],
+//          scale: {
+//           "Oceania": "#2761ad",
+//           "Asia": "#0071A4",
+//           "OTHER": "#c7b789"
+//       },
+//         attribute: 'fill'
+//       }]
+//     }
+// });
+
+// $('#update-colors-button').click(function(e){
+//     e.preventDefault();
+//     //map.series.regions[0].setValues(generateColors()); //set random color for all region
+//     //alert(map.getRegionName('AF'));
+//     //map.removeAllMarkers();
+//     //map.addMarker("SG", {latLng: [1.3, 103.8], name: 'Singapore'},{markers: [{attribute: 'fill'}]});
+//     //map.addMarkers( [{latLng: [1.3, 103.8], name: 'Singapore'},{latLng: [-20.2, 57.5], name: 'Mauritius'}],{markers: [{attribute: 'fill'}]});
+//     map.series.regions[0].setValues(places);
+// });
 });
 
-$('#update-colors-button').click(function(e){
-    e.preventDefault();
-    //map.series.regions[0].setValues(generateColors()); //set random color for all region
-    //alert(map.getRegionName('AF'));
-    //map.removeAllMarkers();
-    //map.addMarker("SG", {latLng: [1.3, 103.8], name: 'Singapore'},{markers: [{attribute: 'fill'}]});
-    //map.addMarkers( [{latLng: [1.3, 103.8], name: 'Singapore'},{latLng: [-20.2, 57.5], name: 'Mauritius'}],{markers: [{attribute: 'fill'}]});
-    map.series.regions[0].setValues(places);
-});
-});
 
-
-</script>
+</script> -->
 
