--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -102,7 +102,9 @@ body {
   width: 160px;
   margin-right: 4px;
   overflow: hidden;
+  text-overflow: ellipsis; 
   vertical-align: bottom; /*to fix overflow hidden adds height issue*/
+  color: white;
  }
 
 .country-list li span:hover{
@@ -112,7 +114,6 @@ body {
  .beento-country-list li {
   display: inline-block;
   margin-right: 4px;
-  overflow: hidden;
   vertical-align: bottom; /*to fix overflow hidden adds height issue*/
  }
 
